# fused-effects-process

./: .gitignore  CHANGELOG.md  README.md  cabal.project  fused-effects-process.cabal  somebugs.org
app/: Main.hs
src/: E1.hs  Example.hs  MetricServer.hs  Raft.hs  Timer.hs  Type.hs
src/Control/Carrier/: HasGroup.hs  HasPeer.hs  HasServer.hs  Metric.hs
src/Control/Carrier/Metric/: IO.hs  Pure.hs
src/Control/Effect/: HasGroup.hs  HasPeer.hs  HasServer.hs  Metric.hs  T.hs  TH.hs  Texample.hs
src/Example/: Client.hs  EOT.hs  Log.hs  Metric.hs  PTC.hs  R.hs  Server.hs  Type.hs  Work.hs
src/MapWork/: Type.hs
src/Process/: HasGroup.hs  HasPeer.hs  HasPeerGroup.hs  HasServer.hs  HasWorkGroup.hs  Metric.hs  TChan.hs  TH.hs  Timer.hs  Type.hs  Util.hs
src/Process/Effect/: HasMessageChan.hs  HasPeer.hs  HasServer.hs  TH.hs  Type.hs  Utils.hs
src/Process/Effect/Example/: T1.hs  T2.hs
src/Process/Effect/Network/: Channel.hs
src/Raft/: Metric.hs  Server.hs  T.hs  Type.hs
