cabal-version:      2.4
name:               fused-effects-process
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             EMQ-YangM
maintainer:         yangm@emqx.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Process.Metric
                    , Process.HasPeerGroup
                    , Process.HasServer
                    , Process.HasWorkGroup
                    , Process.TH
                    , Process.Type
                    , Process.Util
                    , Process.TChan
                    , Process.Timer
                    , Example.Type
                    , Example.Server
                    , Example.Metric
                    , Raft.Type
                    , Raft.Server
                    , Raft.Metric

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.3.0
                    , stm
                    , fused-effects
                    , optics
                    , fused-effects-optics
                    , containers
                    , vector
                    , data-default-class
                    , template-haskell
                    , time
                    , aeson
                    , text
                    , binary
                    , linear-builder
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -W

executable example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.14.3.0,
        fused-effects-process

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded


test-suite fused-effects-process-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base >=4.14.3.0
