cabal-version:      2.4
name:               fused-effects-process
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             EMQ-YangM
maintainer:         yangm@emqx.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Control.Effect.HasGroup
                   , Control.Effect.HasPeer
                   , Control.Effect.HasServer
                   , Control.Effect.Metric

                   , Control.Carrier.HasGroup
                   , Control.Carrier.HasPeer
                   , Control.Carrier.HasServer
                   , Control.Carrier.Metric

                   , Process.HasWorkGroup
                   , Process.TH
                   , Process.Type
                   , Process.Util
                   , Process.TChan
                   , Process.Timer

                   , Example.Type
                   , Example.Server
                   , Example.Metric
                   , Example.Log
                   , Example.Client
                   , Example.EOT
                   , Example.PTC
                   , Example.Work
                   , Example.R

                   , Raft.Type
                   , Raft.Server
                   , Raft.Metric
                   , Raft.T

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.3.0
                    , stm
                    , fused-effects
                    , optics
                    , fused-effects-optics
                    , containers
                    , vector
                    , data-default-class
                    , template-haskell
                    , time
                    , aeson
                    , text
                    , binary
                    , linear-builder
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -W
    -- ghc-options: -W -fspecialise-aggressively -O2

executable example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.14.3.0,
        fused-effects-process

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded -O2


test-suite fused-effects-process-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base >=4.14.3.0
